# BingoGen

./: .gitignore  README.md  proxies.json  pyproject.toml  requirements.txt
.github/workflows/: functionapp.yml
card/: __init__.py
card/lists/: conference.txt  kjlife.txt  mitreattack.txt  presdebate.txt  replystorm.txt
card/static/: conference.css  kjlife.css  mitreattack.css  presdebate.css  replystorm.css
index/: __init__.py
