[tool.poetry]
name = "bingogen"
version = "0.1.0"
description = ""
authors = ["Leron Gray <daddycocoaman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
imgkit = "^1.0.2"
azure-functions = "^1.4.0"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
